--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,7 @@ h1 {
   text-align: center;
   width: 100%;
   margin: 1rem auto;
+  margin-bottom: 5rem;
   padding: 1rem;
   border-radius: 12px;
   background-color: rgba(255, 255, 255, 0.2);
